--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Web Components de ponta, sem complicação.",
   "version": "0.1.0",
   "homepage": "https://github.com/cpsrepositorio/cps-elements",
-  "author": "Erick Petrucelli",
+  "author": "Erick Eduardo Petrucelli <erickpetru@gmail.com>",
   "license": "MIT",
   "customElements": "dist/custom-elements.json",
   "web-types": "dist/web-types.json",
@@ -56,7 +56,9 @@
     "test:component": "web-test-runner -- --watch --group",
     "test:watch": "web-test-runner --watch --group default",
     "list-outdated-dependencies": "npm-check-updates --format repo --peer",
-    "update-dependencies": "npm-check-updates --peer -u && npm install"
+    "update-dependencies": "npm-check-updates --peer -u && npm install",
+    "predeploy": "npm rum build",
+    "deploy": "gh-pages -d docs"
   },
   "engines": {
     "node": ">=14.17.0"
@@ -98,6 +100,7 @@
     "eslint-plugin-wc": "^1.4.0",
     "front-matter": "^4.0.2",
     "get-port": "^6.1.2",
+    "gh-pages": "^5.0.0",
     "globby": "^13.1.3",
     "husky": "^8.0.3",
     "jsonata": "^2.0.1",
