--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "url": "https://github.com/sponsors/ErickPetru"
   },
   "scripts": {
-    "start": "node scripts/build.js --bundle --serve",
+    "dev": "node scripts/build.js --bundle --serve",
     "build": "node scripts/build.js --bundle --types --copydir \"docs/dist\"",
+    "prestart": "symlink-dir docs cps-elements",
+    "start": "http-server . -a localhost -g -o cps-elements && unlink cps-elements",
     "verify": "npm run prettier:check && npm run lint:check && npm run build && npm run test",
     "prepublishOnly": "npm run verify",
     "prettier:check": "prettier --check --loglevel warn .",
@@ -102,6 +104,7 @@
     "get-port": "^6.1.2",
     "gh-pages": "^5.0.0",
     "globby": "^13.1.3",
+    "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "jsonata": "^2.0.1",
     "lint-staged": "^13.1.2",
@@ -118,6 +121,7 @@
     "sinon": "^15.0.1",
     "source-map": "^0.7.4",
     "strip-css-comments": "^5.0.0",
+    "symlink-dir": "^5.1.1",
     "tslib": "^2.5.0",
     "typescript": "4.9.5",
     "user-agent-data-types": "^0.3.0"
