--- a/.github/workflows/github-release-from-tag.yml
+++ b/.github/workflows/github-release-from-tag.yml
@@ -1,5 +1,5 @@
 # This workflow will create a GitHub release every time a tag is pushed
-name: Create GitHub Release
+name: Create GitHub Release from Tag
 
 on:
   push:
