--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -4,26 +4,25 @@ name: Release Package to NPM
 on:
   workflow_dispatch:
     inputs:
-      release-type:
-        description: 'Release type (one of): patch, minor, major, prepatch, preminor, premajor, prerelease'
+      release-level:
+        description: 'Release level (one of): patch, minor, major, prepatch, preminor, premajor, prerelease'
         required: true
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      # Checkout project repository
+      # Checkout project main and setup environment
       - name: Checkout
         uses: actions/checkout@v2.3.4
 
-      # Setup Node.js environment
-      - name: Setup Node.js
+      - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
           registry-url: https://registry.npmjs.org/
           node-version: '14.17'
 
-      # Configure Git
+      # Git configuration
       - name: Git configuration
         run: |
           git config --global user.email "erickpetru@gmail.com"
@@ -32,32 +31,41 @@ jobs:
       # Bump package version
       # Use tag latest
       - name: Bump release version
-        if: startsWith(github.event.inputs.release-type, 'pre') != true
+        if: startsWith(github.event.inputs.release-level, 'pre') != true
         run: |
-          echo "NEW_VERSION=$(npm --no-git-tag-version version $RELEASE_TYPE)" >> $GITHUB_ENV
+          echo "NEW_VERSION=$(npm --no-git-tag-version version $RELEASE_LEVEL)" >> $GITHUB_ENV
           echo "RELEASE_TAG=latest" >> $GITHUB_ENV
         env:
-          RELEASE_TYPE: ${{ github.event.inputs.release-type }}
+          RELEASE_LEVEL: ${{ github.event.inputs.release-level }}
 
       # Bump package pre-release version
       # Use tag beta for pre-release versions
       - name: Bump pre-release version
-        if: startsWith(github.event.inputs.release-type, 'pre')
+        if: startsWith(github.event.inputs.release-level, 'pre') && github.ref_name != 'main'
         run: |
-          echo "NEW_VERSION=$(npm --no-git-tag-version --preid=beta version $RELEASE_TYPE
+          echo "NEW_VERSION=$(npm --no-git-tag-version --preid=beta version $RELEASE_LEVEL)" >> $GITHUB_ENV
           echo "RELEASE_TAG=beta" >> $GITHUB_ENV
         env:
-          RELEASE_TYPE: ${{ github.event.inputs.release-type }}
+          RELEASE_LEVEL: ${{ github.event.inputs.release-level }}
+
+      - name: Bump RC pre-release version
+        if: startsWith(github.event.inputs.release-level, 'pre') && github.ref_name == 'main'
+        run: |
+          echo "NEW_VERSION=$(npm --no-git-tag-version --preid=rc version $RELEASE_LEVEL)" >> $GITHUB_ENV
+          echo "RELEASE_TAG=next" >> $GITHUB_ENV
+        env:
+          RELEASE_LEVEL: ${{ github.event.inputs.release-level }}
 
       # Update changelog unreleased section with new version
       - name: Update changelog
+        if: startsWith(github.event.inputs.release-level, 'pre') != true
         uses: superfaceai/release-changelog-action@v1
         with:
           path-to-changelog: CHANGELOG.md
           version: ${{ env.NEW_VERSION }}
           operation: release
 
-      # Commit changes
+      # Commit changelog changes
       - name: Commit CHANGELOG.md and package.json changes and create tag
         run: |
           git add "package.json"
@@ -71,7 +79,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ACCESS_TOKEN }}
 
-      # Push repository changes
+      # Push changes to origin
       - name: Push changes to repository
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -80,19 +88,20 @@ jobs:
 
       # Read version changelog
       - id: get-changelog
-        name: Get version changelog
+        name: Get release version changelog
+        if: startsWith(github.event.inputs.release-level, 'pre') != true
         uses: superfaceai/release-changelog-action@v1
         with:
           path-to-changelog: CHANGELOG.md
           version: ${{ env.NEW_VERSION }}
           operation: read
 
-      # Update GitHub release with changelog
+      # Update release documentation
       - name: Update GitHub release documentation
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.NEW_VERSION }}
           body: ${{ steps.get-changelog.outputs.changelog }}
-          prerelease: ${{ startsWith(github.event.inputs.release-type, 'pre') }}
+          prerelease: ${{ startsWith(github.event.inputs.release-level, 'pre') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
