--- a/.github/workflows/test-local-release.yml
+++ b/.github/workflows/test-local-release.yml
@@ -1,5 +1,4 @@
-# This workflow will submit a new version of the library to NPM and create a GitHub release
-name: Release Package to NPM
+name: Test Local Package Release
 
 on:
   workflow_dispatch:
@@ -9,7 +8,7 @@ on:
         required: true
 
 jobs:
-  release:
+  local-release:
     runs-on: ubuntu-latest
     steps:
       # Checkout project main and setup environment
@@ -82,52 +81,10 @@ jobs:
         env:
           RELEASE_LEVEL: ${{ github.event.inputs.release-level }}
 
-      # Update changelog unreleased section with new version
-      - name: Update changelog contents
-        if: startsWith(github.event.inputs.release-level, 'pre') != true
-        uses: superfaceai/release-changelog-action@v1
-        with:
-          path-to-changelog: CHANGELOG.md
-          version: ${{ env.NEW_VERSION }}
-          operation: release
-
-      # Commit changelog changes
-      - name: Commit new version and create tag
-        run: |
-          git add "package.json"
-          git add "CHANGELOG.md"
-          git commit -m "chore: release ${{ env.NEW_VERSION }}"
-          git tag ${{ env.NEW_VERSION }}
-
       # Publish version to public repository
       - name: Publish package
-        run: yarn publish --verbose --access public --tag ${{ env.RELEASE_TAG }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ACCESS_TOKEN }}
+        run: npm pack
 
-      # Push changes to origin
-      - name: Push changes to repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git push origin && git push --tags
-
-      # Read version changelog
-      - id: get-changelog
-        name: Get release version changelog
-        if: startsWith(github.event.inputs.release-level, 'pre') != true
-        uses: superfaceai/release-changelog-action@v1
-        with:
-          path-to-changelog: CHANGELOG.md
-          version: ${{ env.NEW_VERSION }}
-          operation: read
-
-      # Update release documentation
-      - name: Update release documentation
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ env.NEW_VERSION }}
-          body: ${{ steps.get-changelog.outputs.changelog }}
-          prerelease: ${{ startsWith(github.event.inputs.release-level, 'pre') }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Force fail to keep docker file available
+      - name: Fail last step
+        run: exit 1
