--- a/package.json
+++ b/package.json
@@ -5,24 +5,40 @@
   "homepage": "https://github.com/cpsrepositorio/cps-elements",
   "author": "Erick Eduardo Petrucelli <erickpetru@gmail.com>",
   "license": "MIT",
-  "customElements": "dist/custom-elements.json",
-  "web-types": "dist/web-types.json",
   "type": "module",
-  "types": "dist/elements.d.ts",
+  "customElements": "custom-elements.json",
+  "web-types": "web-types.json",
+  "types": "index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/elements.d.ts",
-      "import": "./dist/elements.js"
+      "types": "./index.d.ts",
+      "import": "./index.js"
     },
-    "./dist/themes/*": "./dist/themes/*",
-    "./dist/components/*": "./dist/components/*",
-    "./dist/utilities/*": "./dist/utilities/*",
-    "./dist/react": "./dist/react/index.js",
-    "./dist/react/*": "./dist/react/*",
-    "./dist/translations/*": "./dist/translations/*"
+    "./autoloader": "./autoloader.js",
+    "./themes/*": "./themes/*",
+    "./components/*": "./components/*/index.js",
+    "./utilities/*": "./utilities/*",
+    "./react": "./react/index.js",
+    "./react/*": "./react/*",
+    "./translations/*": "./translations/*"
   },
   "files": [
-    "dist"
+    "assets",
+    "chunks",
+    "components",
+    "internal",
+    "react",
+    "styles",
+    "themes",
+    "translations",
+    "utilities",
+    "autoloader.d.ts",
+    "autoloader.js",
+    "custom-elements.json",
+    "index.d.ts",
+    "index.js",
+    "vscode.html-custom-data.json",
+    "web-types.json"
   ],
   "keywords": [
     "web components",
@@ -67,7 +83,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.2.1",
     "@lit-labs/react": "^1.1.1",
-    "lit": "^2.6.1"
+    "lit": "^2.7.0"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.6.8",
@@ -95,7 +111,7 @@
     "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lit": "^1.8.2",
-    "eslint-plugin-lit-a11y": "^2.3.0",
+    "eslint-plugin-lit-a11y": "^2.4.0",
     "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-wc": "^1.4.0",
