--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "build": "node scripts/build.js --bundle --types --copydir \"docs/dist\"",
     "prestart": "symlink-dir docs cps-elements",
     "start": "http-server . -a localhost -g -o cps-elements && unlink cps-elements",
-    "verify": "npm run prettier:check && npm run lint:check && npm run build && npm run test",
+    "verify": "npm run prettier:check && npm run eslint:check && npm run stylelint:check && npm run build && npm run test",
     "prettier:check": "prettier --check --loglevel warn .",
     "prettier:fix": "prettier --write --loglevel warn .",
-    "lint:check": "eslint src --max-warnings 0",
-    "lint:fix": "eslint src --max-warnings 0 --fix",
+    "eslint:check": "eslint src --max-warnings 0",
+    "eslint:fix": "eslint src --max-warnings 0 --fix",
+    "stylelint:check": "stylelint {docs,src}/**/*.{styles.ts,css,html,md}",
+    "stylelint:fix": "stylelint {docs,src}/**/*.{styles.ts,css,html,md} --fix",
     "ts:check": "tsc --noEmit --project ./tsconfig.json",
     "spell:check": "cspell \"**/*.{js,ts,json,html,css,md}\" --no-progress",
     "create": "plop --plopfile scripts/plop/plopfile.js",
@@ -131,12 +133,18 @@
     "open": "^8.4.1",
     "pascal-case": "^3.1.2",
     "plop": "^3.1.2",
+    "postcss-html": "^1.5.0",
+    "postcss-lit": "^1.1.0",
+    "postcss-markdown": "^1.2.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "recursive-copy": "^2.0.14",
     "sinon": "^15.0.1",
     "source-map": "^0.7.4",
     "strip-css-comments": "^5.0.0",
+    "stylelint": "^15.6.1",
+    "stylelint-config-concentric-order": "^5.1.0",
+    "stylelint-config-recommended": "^12.0.0",
     "symlink-dir": "^5.1.1",
     "tslib": "^2.5.0",
     "typescript": "4.9.5",
