--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "@web/dev-server-esbuild": "^0.3.3",
+    "@web/dev-server-esbuild": "^0.3.6",
     "@web/test-runner": "^0.15.0",
     "@web/test-runner-commands": "^0.6.5",
     "@web/test-runner-playwright": "^0.9.0",
@@ -109,7 +109,8 @@
     "cspell": "^6.26.3",
     "del": "^7.0.0",
     "download": "^8.0.0",
-    "esbuild": "0.16.17",
+    "esbuild": "^0.16.17",
+    "esbuild-plugin-replace": "^1.4.0",
     "eslint": "^8.45.0",
     "eslint-plugin-chai-expect": "^3.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
