conf: prefer prettier-vscode extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,6 @@
     "streetsidesoftware.code-spell-checker",
     "stylelint.vscode-stylelint",
     "davidanson.vscode-markdownlint",
-    "rvest.vs-code-prettier-eslint"
+    "esbenp.prettier-vscode"
   ]
 }
